tests/paczka1/fuzzy1/57886092.err
Error in line 12: B25NIbNf8M A101 59,6
Error in line 19: cbp A578 48,9
Error in line 22: cbp S206 6,1
